# exp-CV

./: OpenCV.sublime-build  README.md
Build System/: CImg.sublime-build  CMakeLists.txt  OpenCV++.sublime-build  OpenCVC.sublime-build  OpenCVcmake.sublime-build
CamaraDoble/: main.cpp  main_thread.cpp
Hello/: Hello.cpp
and/: and.cpp
compac_bits/: comp.cpp
compact_bits_color/: comp_color.cpp
draw_hist/: dhist.cpp
equal_Histograma/: Histo.cpp
exemplos/: BasicLinearTransformsTrackbar.cpp  Laplace_Demo.cpp  Sobel_Demo.cpp  laplace.cpp
filtro_gaussiano/: filtro_gauss.cpp  filtro_gauss_trackbar.cpp
filtro_gaussiano/filtro_gauss/: filtro_gauss.cpp
filtro_gaussiano/trackbar/: filtro_gauss_trackbar.cpp
filtro_laplaciano/: laplaciano.cpp
filtro_media/: filtros_de_media.cpp  filtros_de_media_trackbar.cpp
filtro_media/filtro_media/: filtros_de_media.cpp
filtro_media/trackbar/: filtros_de_media_trackbar.cpp
filtro_mediana/: filtros_de_mediana_trackbar.cpp
filtros/: filtros.cpp  filtros_com_trackbar.cpp  filtros_de_media_trackbar.cpp  filtros_de_mediana_trackbar.cpp
filtros_combinacao/: komb.cpp
images/: README.md
interpolacao/: inter.cpp
mult/: mult.cpp
negativo_color/: neg_color.cpp
planos_bits/: planos.cpp
random_img/: random_img.cpp
rev_assunto/: revassu.cpp
show_video/: video.cpp
sobel/: sobel.cpp
sombreamento/: sombreamento.cpp
split_color/: split_color.cpp
subtracao/: sub.cpp
texto/: text.cpp
trackbar/: trackbar.cpp
videoshow/: video.cpp
